@@ -31,3 +31,13 @@ javafx {
     version = '15'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+tasks.withType(Test) {
+    jvmArgs += '--enable-preview'
+}
